--- a/DataFit/13_Metropolitana_SEIRHVD5.ipynb
+++ b/DataFit/13_Metropolitana_SEIRHVD5.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,6 @@
       "Importing ICU Beds Data\n",
       "Importing Deaths by DEIS\n",
       "Importing Active Infected by Minciencia\n",
-      "Importing Hospitalized/NonHospitalized Deaths\n",
       "Done\n"
      ]
     }
@@ -329,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -589,11 +588,11 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=12)]: Using backend LokyBackend with 12 concurrent workers.\n",
-      "[Parallel(n_jobs=12)]: Done   1 tasks      | elapsed:    1.1s\n",
-      "[Parallel(n_jobs=12)]: Done   2 out of   5 | elapsed:    1.1s remaining:    1.7s\n",
-      "[Parallel(n_jobs=12)]: Done   3 out of   5 | elapsed:    1.2s remaining:    0.8s\n",
-      "[Parallel(n_jobs=12)]: Done   5 out of   5 | elapsed:    1.5s remaining:    0.0s\n",
-      "[Parallel(n_jobs=12)]: Done   5 out of   5 | elapsed:    1.5s finished\n",
+      "[Parallel(n_jobs=12)]: Done   1 tasks      | elapsed:    1.4s\n",
+      "[Parallel(n_jobs=12)]: Done   2 out of   5 | elapsed:    1.4s remaining:    2.1s\n",
+      "[Parallel(n_jobs=12)]: Done   3 out of   5 | elapsed:    1.9s remaining:    1.2s\n",
+      "[Parallel(n_jobs=12)]: Done   5 out of   5 | elapsed:    2.3s remaining:    0.0s\n",
+      "[Parallel(n_jobs=12)]: Done   5 out of   5 | elapsed:    2.3s finished\n",
       "ready\n"
      ]
     }
@@ -621,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,16 +653,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "73"
+       "122"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,27 +790,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17039"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "state.Ir[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(simulation[0].I)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.23391937010287128,\n",
+       " 0.27568977162322367,\n",
+       " 0.3247580649794889,\n",
+       " 0.3811697591259596,\n",
+       " 0.44363540047649497]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "SeroPrevalenceDet"
    ]
@@ -825,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1359,6 +1395,283 @@
    "source": [
     "Peak_delta"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pandas GUI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pandasgui import show"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<importdata.ImportData at 0x7f28e037fa60>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([17039, 11938, 11434, 10931, 10723, 10914, 10618, 11200, 11002,\n",
+       "       11240, 10900, 11330, 11272, 11688, 11674, 12431, 12981, 14909,\n",
+       "       15332, 16515, 15339, 19074, 19160, 23833, 26131, 30447, 29007,\n",
+       "       31423, 30625, 30847, 29400, 27598, 25317, 26196, 25374, 26068])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state.Ir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {'Ir':state.Ir,'Ir_dates':state.Ir_dates,'Ir_t':state.tr,'Dr':state.Dr,'Dr_dates':state.Br_dates,'Dr_t':state.Br_tr}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataframe = pd.DataFrame(dict([ (k,pd.Series(v)) for k,v in data.items() ]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ir</th>\n",
+       "      <th>Ir_dates</th>\n",
+       "      <th>Ir_t</th>\n",
+       "      <th>Dr</th>\n",
+       "      <th>Dr_dates</th>\n",
+       "      <th>Dr_t</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>17039.0</td>\n",
+       "      <td>2020-10-19</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>2020-10-19</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11938.0</td>\n",
+       "      <td>2020-10-24</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>53</td>\n",
+       "      <td>2020-10-20</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>11434.0</td>\n",
+       "      <td>2020-10-26</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>43</td>\n",
+       "      <td>2020-10-21</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10931.0</td>\n",
+       "      <td>2020-10-30</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>2020-10-22</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10723.0</td>\n",
+       "      <td>2020-11-02</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>43</td>\n",
+       "      <td>2020-10-23</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>117</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>61</td>\n",
+       "      <td>2021-02-13</td>\n",
+       "      <td>117</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>118</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>56</td>\n",
+       "      <td>2021-02-14</td>\n",
+       "      <td>118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>73</td>\n",
+       "      <td>2021-02-15</td>\n",
+       "      <td>119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>44</td>\n",
+       "      <td>2021-02-16</td>\n",
+       "      <td>120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2021-02-17</td>\n",
+       "      <td>121</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>122 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Ir   Ir_dates  Ir_t  Dr   Dr_dates  Dr_t\n",
+       "0    17039.0 2020-10-19   0.0  46 2020-10-19     0\n",
+       "1    11938.0 2020-10-24   5.0  53 2020-10-20     1\n",
+       "2    11434.0 2020-10-26   7.0  43 2020-10-21     2\n",
+       "3    10931.0 2020-10-30  11.0  46 2020-10-22     3\n",
+       "4    10723.0 2020-11-02  14.0  43 2020-10-23     4\n",
+       "..       ...        ...   ...  ..        ...   ...\n",
+       "117      NaN        NaT   NaN  61 2021-02-13   117\n",
+       "118      NaN        NaT   NaN  56 2021-02-14   118\n",
+       "119      NaN        NaT   NaN  73 2021-02-15   119\n",
+       "120      NaN        NaT   NaN  44 2021-02-16   120\n",
+       "121      NaN        NaT   NaN  15 2021-02-17   121\n",
+       "\n",
+       "[122 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'show' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-b6872ddbe0f6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'show' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "show(dataframe)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
