--- a/DataFit/Chile_Enero_CepaUK.ipynb
+++ b/DataFit/Chile_Enero_CepaUK.ipynb
@@ -122,7 +122,6 @@
       "Importing ICU Beds Data\n",
       "Importing Deaths by DEIS\n",
       "Importing Active Infected by Minciencia\n",
-      "Importing Hospitalized/NonHospitalized Deaths\n",
       "Done\n"
      ]
     }
@@ -589,11 +588,11 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=12)]: Using backend LokyBackend with 12 concurrent workers.\n",
-      "[Parallel(n_jobs=12)]: Done   1 tasks      | elapsed:    1.8s\n",
-      "[Parallel(n_jobs=12)]: Done   2 out of   5 | elapsed:    1.9s remaining:    2.8s\n",
-      "[Parallel(n_jobs=12)]: Done   3 out of   5 | elapsed:    2.5s remaining:    1.7s\n",
-      "[Parallel(n_jobs=12)]: Done   5 out of   5 | elapsed:    2.8s remaining:    0.0s\n",
-      "[Parallel(n_jobs=12)]: Done   5 out of   5 | elapsed:    2.8s finished\n",
+      "[Parallel(n_jobs=12)]: Done   1 tasks      | elapsed:    2.7s\n",
+      "[Parallel(n_jobs=12)]: Done   2 out of   5 | elapsed:    3.0s remaining:    4.5s\n",
+      "[Parallel(n_jobs=12)]: Done   3 out of   5 | elapsed:    3.8s remaining:    2.5s\n",
+      "[Parallel(n_jobs=12)]: Done   5 out of   5 | elapsed:    4.3s remaining:    0.0s\n",
+      "[Parallel(n_jobs=12)]: Done   5 out of   5 | elapsed:    4.3s finished\n",
       "ready\n"
      ]
     }
@@ -614,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,6 +630,46 @@
     "Q_UK = Quarantine(rem_mob,max_mob,qp=0,iqt=0,fqt=navidad_day)\n",
     "\n",
     "alpha_UK = Q_UK.alpha"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6991070385578684"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_mob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.553571196795263"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "beta_uk/(beta*rem_mob)"
    ]
   },
   {
@@ -730,11 +769,11 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=12)]: Using backend LokyBackend with 12 concurrent workers.\n",
-      "[Parallel(n_jobs=12)]: Done   1 tasks      | elapsed:    2.5s\n",
-      "[Parallel(n_jobs=12)]: Done   2 out of   5 | elapsed:    2.7s remaining:    4.1s\n",
-      "[Parallel(n_jobs=12)]: Done   3 out of   5 | elapsed:    2.7s remaining:    1.8s\n",
-      "[Parallel(n_jobs=12)]: Done   5 out of   5 | elapsed:    2.9s remaining:    0.0s\n",
-      "[Parallel(n_jobs=12)]: Done   5 out of   5 | elapsed:    2.9s finished\n",
+      "[Parallel(n_jobs=12)]: Done   1 tasks      | elapsed:    3.8s\n",
+      "[Parallel(n_jobs=12)]: Done   2 out of   5 | elapsed:    4.3s remaining:    6.4s\n",
+      "[Parallel(n_jobs=12)]: Done   3 out of   5 | elapsed:    4.3s remaining:    2.9s\n",
+      "[Parallel(n_jobs=12)]: Done   5 out of   5 | elapsed:    4.4s remaining:    0.0s\n",
+      "[Parallel(n_jobs=12)]: Done   5 out of   5 | elapsed:    4.4s finished\n",
       "ready\n"
      ]
     }
@@ -801,7 +840,7 @@
     {
      "data": {
       "text/plain": [
-       "76"
+       "83"
       ]
      },
      "execution_count": 28,
@@ -815,16 +854,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim_UK= False"
+    "sim_UK= True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
