--- a/DataFit/Chile_Marzo_v1.ipynb
+++ b/DataFit/Chile_Marzo_v1.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 275,
    "metadata": {
     "scrolled": true
    },
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        "19458310"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 276,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
     "\n",
     "Q_UK = Quarantine(rem_mob,max_mob_UK,qp=0,iqt=0,fqt=newyear_day+3)\n",
     "\n",
-    "Q_UK2 = Events.functionAddition([Q1.alpha,Quarantine(0,max_mob_UK-max_mob,qp=0,iqt=0,fqt=today_day).alpha])\n",
+    "Q_UK2 = Events.functionAddition([Q1.alpha,Quarantine(0,max_mob_UK-3,qp=0,iqt=0,fqt=today_day).alpha])\n",
     "\n",
     "Q2 = Quarantine(rem_mob)\n",
     "\n",
@@ -258,7 +258,9 @@
     "\n",
     "alpha = [Q1.alpha,Q_UK2]\n",
     "\n",
-    "days=[[0,newyear_day+3],[newyear_day+3,today_day],[today_day,tsim]]\n",
+    "mitdadvacaciones = datetime(2021,1,21)\n",
+    "mitadvacaciones_day = (mitdadvacaciones - initdate).days\n",
+    "days=[[0,newyear_day+3],[newyear_day+3,mitadvacaciones_day],[mitadvacaciones_day,tsim]]\n",
     "#days = [[0,10],[10,20],[20,30]]\n",
     "alpha_new = Events.Events(values=[0.45,0.57,0.05],days=days)\n",
     "\n",
@@ -267,37 +269,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Quarantines \n",
-    "max_mob = 0.57\n",
-    "rem_mob = 0.45\n",
+    "first_mob = 0.45\n",
+    "second_mob = 0.57\n",
+    "third_mob = 0.54\n",
+    "\n",
+    "\n",
     "beta_uk_cl_ratio = 1.55\n",
     "max_mob_UK = max_mob*beta_uk_cl_ratio\n",
     "\n",
     "\n",
     "redrate = [0.2,0.5,1.0]\n",
-    "alpha_new = [Events.Events(values=[rem_mob,max_mob,max_mob*i],days=days) for i in redrate]\n",
+    "days=[[0,newyear_day+3],[newyear_day+3,mitadvacaciones_day],[mitadvacaciones_day,tsim]]\n",
     "\n",
-    "alpha_new_uk = [Events.Events(values=[rem_mob,max_mob,max_mob_UK*i],days=days) for i in redrate]\n"
+    "alpha_new = [Events.Events(values=[first_mob,second_mob,first_mob*i],days=days) for i in [1]]\n",
+    "\n",
+    "alpha_new_uk = [Events.Events(values=[first_mob,second_mob,second_mob*i],days=days) for i in redrate]\n",
+    "\n",
+    "alpha_new = Events.Events(values=[first_mob,second_mob,third_mob],days=days)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
     "t = np.array(np.arange(0,120,0.1))\n",
-    "alphaplot= [[j(i) for i in t] for j in alpha_new]\n",
-    "alphaplot_UK= [[j(i) for i in t] for j in alpha_new_uk]"
+    "alphaplot= [[j(i) for i in t] for j in [alpha_new]]\n",
+    "#alphaplot_UK= [[j(i) for i in t] for j in alpha_new_uk]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
@@ -311,8 +320,8 @@
    "source": [
     "for f in alphaplot:\n",
     "    plt.plot(t,f)\n",
-    "for f in alphaplot_UK:\n",
-    "    plt.plot(t,f,linestyle='dashed')    \n",
+    "#for f in alphaplot_UK:\n",
+    "    #plt.plot(t,f,linestyle='dashed')    \n",
     "plt.tick_params(labelsize=18)\n",
     "plt.legend(loc=0)\n",
     "plt.title('Mobility-beta',fontsize=20)\n",
@@ -337,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,14 +535,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Año nuevo\n",
     "delay = 0\n",
-    "increasedays = 15\n",
-    "renewalFactor_ny = 0.5\n",
+    "increasedays = 7\n",
+    "renewalFactor_ny = 0.25\n",
     "dailyincrease = state.population*SeroPrevFactor*renewalFactor_ny/increasedays\n",
     "\n",
     "chi2 = SeroPrevDynamics(newyear_day+delay,newyear_day+delay+increasedays*0.05,newyear_day+delay+increasedays,dailyincrease,form='line')\n",
@@ -545,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,16 +563,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [],
    "source": [
-    "renewalFactor = [-0.5,0,1.35]"
+    "renewalFactor = [0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,12 +632,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
     "#alpha[0]\n",
-    "simulation = [SEIRHVD(tsim,beta,mu,alpha_new[i],k_I=k_I,k_R = k_R, chi = chi[i],\n",
+    "simulation = [SEIRHVD(tsim,beta,mu,alpha_new,k_I=k_I,k_R = k_R, chi = chi[i],\n",
     "                      Htot=10000,Vtot=int(state.UCI_capacity[0]),H0=1000,V0=state.UCI_use_covid[0],B0=state.Br[0],D0=state.Dr[0]\n",
     "                      ,R0=state.I_ac_r[0]-state.I_ac_r[0]*0.1,I0=state.Ir[0],I_d0=state.I_d_r[0],I_ac0=state.I_ac_r[0],\n",
     "                      SeroPrevFactor=SeroPrevFactor,expinfection=expinfection,initdate = initdate,\n",
@@ -637,23 +646,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(alpha_new)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -664,15 +660,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Compartimental model State parameters changed\n",
-      "Compartimental model State parameters changed\n",
       "Compartimental model State parameters changed\n"
      ]
     }
@@ -733,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [
     {
@@ -752,9 +746,8 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=12)]: Using backend LokyBackend with 12 concurrent workers.\n",
-      "[Parallel(n_jobs=12)]: Done   1 tasks      | elapsed:    1.3s\n",
-      "[Parallel(n_jobs=12)]: Done   3 out of   3 | elapsed:    1.9s remaining:    0.0s\n",
-      "[Parallel(n_jobs=12)]: Done   3 out of   3 | elapsed:    1.9s finished\n",
+      "[Parallel(n_jobs=12)]: Done   1 tasks      | elapsed:    0.9s\n",
+      "[Parallel(n_jobs=12)]: Done   1 out of   1 | elapsed:    0.9s finished\n",
       "ready\n"
      ]
     }
@@ -778,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +780,7 @@
        "0.45"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 299,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,15 +811,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Compartimental model State parameters changed\n",
-      "Compartimental model State parameters changed\n",
       "Compartimental model State parameters changed\n"
      ]
     }
@@ -887,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [
     {
@@ -906,9 +897,8 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=12)]: Using backend LokyBackend with 12 concurrent workers.\n",
-      "[Parallel(n_jobs=12)]: Done   1 tasks      | elapsed:    0.9s\n",
-      "[Parallel(n_jobs=12)]: Done   3 out of   3 | elapsed:    1.7s remaining:    0.0s\n",
-      "[Parallel(n_jobs=12)]: Done   3 out of   3 | elapsed:    1.7s finished\n",
+      "[Parallel(n_jobs=12)]: Done   1 tasks      | elapsed:    1.1s\n",
+      "[Parallel(n_jobs=12)]: Done   1 out of   1 | elapsed:    1.1s finished\n",
       "ready\n"
      ]
     }
@@ -929,16 +919,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [],
    "source": [
-    "saveplot = False\n",
+    "saveplot = True\n",
     "if saveplot:\n",
     "    %matplotlib inline\n",
     "#%matplotlib inline\n",
     "%matplotlib tk\n",
+    "# Big Screen\n",
     "plt.rcParams[\"figure.figsize\"] = 38.40, 20.56 #19.20,10.80#8,6\n",
+    "# Small Screen\n",
+    "plt.rcParams[\"figure.figsize\"] = 19.2, 10.80 #19.20,10.80#8,6\n",
     "plt.rcParams.update({\n",
     "    \"text.usetex\": False,\n",
     "    \"font.family\": \"sans-serif\",\n",
@@ -954,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,16 +980,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim_UK = True"
+    "sim_UK = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,22 +1007,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 41,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "findfont: Font family ['sans-serif'] not found. Falling back to DejaVu Sans.\n",
-      "findfont: Font family ['sans-serif'] not found. Falling back to DejaVu Sans.\n",
-      "findfont: Font family ['sans-serif'] not found. Falling back to DejaVu Sans.\n",
-      "findfont: Font family ['sans-serif'] not found. Falling back to DejaVu Sans.\n",
-      "findfont: Font family ['sans-serif'] not found. Falling back to DejaVu Sans.\n"
-     ]
-    }
-   ],
+   "source": [
+    "### Pantalla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 312,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#4k\n",
+    "fontsize_title = 22\n",
+    "fontsize_suptitle = 25\n",
+    "fontsize_label = 18\n",
+    "fontsize_legend = 14"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 313,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1080\n",
+    "fontsize_title = 15\n",
+    "fontsize_suptitle = 16\n",
+    "fontsize_label = 12\n",
+    "fontsize_legend = 8\n",
+    "\n",
+    "pĺotlinewidth = 2\n",
+    "datelinewidth = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 314,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "colors = plt.cm.rainbow_r(np.linspace(0,1,len(renewalFactor)))\n",
     "\n",
@@ -1039,7 +1056,7 @@
     "    axs[0,0].plot(dates[i],simulation[i].I_ac_det,linewidth=pĺotlinewidth,label='RF: '+str(renewalFactor[i])+' | SP_R: '+str(round(100*SeroPrevalence[i],2))+'%'+' | SP_D:'+str(round(100*SeroPrevalenceDet[i],2))+'%',color=colors[i])\n",
     "    if sim_UK:\n",
     "        axs[0,0].plot(dates[i],simulation_uk[i].I_ac_det,color=colors[i],linestyle='dashed',linewidth=pĺotlinewidth)\n",
-    "axs[0,0].set_title('Infectados acumulados',fontsize=22)\n",
+    "axs[0,0].set_title('Infectados acumulados',fontsize=fontsize_title)\n",
     "axs[0,0].set_xlim(initdate,enddate)\n",
     "#axs[0,0].set_ylim(0,1.5e6)\n",
     "\n",
@@ -1068,7 +1085,7 @@
     "    if sim_UK:\n",
     "        axs[0,1].plot(dates[i],simulation_uk[i].B,color=colors[i],linestyle='dashed',linewidth=pĺotlinewidth)\n",
     "    \n",
-    "axs[0,1].set_title('Muertes Acumuladas',fontsize=22)\n",
+    "axs[0,1].set_title('Muertes Acumuladas',fontsize=fontsize_title)\n",
     "axs[0,1].set_xlim(initdate,enddate)\n",
     "#axs[0,1].set_ylim(0,1e4)\n",
     "\n",
@@ -1086,7 +1103,7 @@
     "    axs[1,0].plot(dates[i],simulation[i].I_d_det,label='RenewalFactor: '+str(renewalFactor[i]),color=colors[i],linewidth=pĺotlinewidth)\n",
     "    if sim_UK:\n",
     "        axs[1,0].plot(dates[i],simulation_uk[i].I_d_det,color=colors[i],linestyle='dashed',linewidth=pĺotlinewidth)    \n",
-    "axs[1,0].set_title('Nuevos Infectados Diarios',fontsize=22)\n",
+    "axs[1,0].set_title('Nuevos Infectados Diarios',fontsize=fontsize_title)\n",
     "axs[1,0].set_xlim(initdate,enddate)\n",
     "#axs[1,0].set_ylim(0,1e4)\n",
     "\n",
@@ -1114,7 +1131,7 @@
     "    #axs[1,1].plot(dates[i],simulation[i].V_need,linestyle='dashed',color=colors[i])\n",
     "    if sim_UK:\n",
     "        axs[1,1].plot(dates[i],simulation_uk[i].V,color=colors[i],linestyle='dashed',linewidth=pĺotlinewidth)    \n",
-    "axs[1,1].set_title('Uso UCI',fontsize=22)\n",
+    "axs[1,1].set_title('Uso UCI',fontsize=fontsize_title)\n",
     "axs[1,1].set_xlim(initdate,enddate)\n",
     "#axs[1,1].set_ylim(0,3e3)\n",
     "\n",
@@ -1153,19 +1170,19 @@
     "axs[1,1].get_yaxis().set_major_formatter(matplotlib.ticker.FuncFormatter(lambda x, p: format(int(x), ',')))\n",
     "\n",
     "# Font-size\n",
-    "axs[0,0].tick_params(labelsize=18)\n",
-    "axs[0,1].tick_params(labelsize=18)\n",
-    "axs[1,0].tick_params(labelsize=18)\n",
-    "axs[1,1].tick_params(labelsize=18)\n",
+    "axs[0,0].tick_params(labelsize=fontsize_label)\n",
+    "axs[0,1].tick_params(labelsize=fontsize_label)\n",
+    "axs[1,0].tick_params(labelsize=fontsize_label)\n",
+    "axs[1,1].tick_params(labelsize=fontsize_label)\n",
     "\n",
     "# Legend\n",
-    "axs[0,0].legend(loc=0,fontsize=14)\n",
-    "axs[0,1].legend(loc=1,fontsize=14)\n",
-    "axs[1,0].legend(loc=1,fontsize=14)\n",
-    "axs[1,1].legend(loc=1,fontsize=14)\n",
+    "axs[0,0].legend(loc=0,fontsize=fontsize_legend)\n",
+    "axs[0,1].legend(loc=1,fontsize=fontsize_legend)\n",
+    "axs[1,0].legend(loc=1,fontsize=fontsize_legend)\n",
+    "axs[1,1].legend(loc=1,fontsize=fontsize_legend)\n",
     "\n",
     "\n",
-    "fig.suptitle(state.name,fontsize=25)\n",
+    "fig.suptitle(state.name,fontsize=fontsize_suptitle)\n",
     "fig.show()"
    ]
   },
@@ -1241,9 +1258,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "findfont: Font family ['sans-serif'] not found. Falling back to DejaVu Sans.\n"
+     ]
+    }
+   ],
    "source": [
     "#%matplotlib tk\n",
     "plt.title('SeroPrevalence')\n",
